--- a/Grammar.ipynb
+++ b/Grammar.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -11,20 +11,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting pygame\n",
-      "  Downloading https://files.pythonhosted.org/packages/45/34/38e7465c1aea7d570b83d9004eb0c4e783c9c1b17eb9eeb9a760c0898783/pygame-1.9.4-cp36-cp36m-win_amd64.whl (4.2MB)\n",
-      "Installing collected packages: pygame\n",
-      "Successfully installed pygame-1.9.4\n"
+      "Collecting pip\n",
+      "  Downloading https://files.pythonhosted.org/packages/d8/f3/413bab4ff08e1fc4828dfc59996d721917df8e8583ea85385d51125dceff/pip-19.0.3-py2.py3-none-any.whl (1.4MB)\n",
+      "Installing collected packages: pip\n",
+      "  Found existing installation: pip 18.1\n",
+      "    Uninstalling pip-18.1:\n",
+      "      Successfully uninstalled pip-18.1\n",
+      "Successfully installed pip-19.0.3\n",
+      "Requirement already satisfied: pygame in c:\\users\\me\\anaconda3\\lib\\site-packages (1.9.4)\n",
+      "Collecting midiutil\n",
+      "  Downloading https://files.pythonhosted.org/packages/f5/44/fde6772d8bfaea64fcf5eb948124d0a5fdf5f848b14ac22a23ced53e562d/MIDIUtil-1.2.1.tar.gz (1.0MB)\n",
+      "Building wheels for collected packages: midiutil\n",
+      "  Building wheel for midiutil (setup.py): started\n",
+      "  Building wheel for midiutil (setup.py): finished with status 'done'\n",
+      "  Stored in directory: C:\\Users\\Me\\AppData\\Local\\pip\\Cache\\wheels\\70\\f1\\24\\97bde012f64820632e1e5e2935df19dfbcf9e058b0734b57cd\n",
+      "Successfully built midiutil\n",
+      "Installing collected packages: midiutil\n",
+      "Successfully installed midiutil-1.2.1\n"
      ]
     }
    ],
    "source": [
-    "! pip install pygame"
+    "# Libraries\n",
+    "! python -m pip install --upgrade pip\n",
+    "\n",
+    "! pip install pygame\n",
+    "! pip install midiutil"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -50,45 +67,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 85,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Function which chooses a rule according to the probs\n",
-    "def choose_rule():\n",
-    "    p1 = 0.7\n",
-    "    p2 = 0.3\n",
-    "    p3 = 0\n",
-    "    \n",
+    "def choose_rule(size):\n",
     "    choice = np.random.random()\n",
     "    \n",
-    "    if(choice < p1):\n",
-    "        return 1\n",
-    "    if(choice < p1+p2):\n",
-    "        return 2\n",
-    "    if(choice < p1+p2+p3):\n",
-    "        return 3"
+    "    if(size != 1):\n",
+    "        p1 = 0.5\n",
+    "        p2 = 0.5\n",
+    "        p3 = 0\n",
+    "\n",
+    "        if(choice < p1):\n",
+    "            return 1\n",
+    "        if(choice < p1+p2):\n",
+    "            return 2\n",
+    "        if(choice < p1+p2+p3):\n",
+    "            return 3\n",
+    "    \n",
+    "    #Final level (stop case)\n",
+    "    if(size == 1):\n",
+    "        if(choice < 0.5):\n",
+    "            return 2\n",
+    "        if(choice > 0.5):\n",
+    "            return 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Rhythm generation\n",
     "def generate_rhythm(size, volume):\n",
     "    rhythm = np.zeros(size)\n",
     "    \n",
-    "    # End case (else infinite recursion)\n",
-    "    if(size == 1):\n",
-    "        rhythm[0] = 255\n",
-    "        return rhythm\n",
-    "    \n",
     "    # Recursion\n",
-    "    rule = choose_rule()\n",
+    "    rule = choose_rule(size)\n",
     "    \n",
     "    if (rule == 1):\n",
     "        rhythm = np.append( generate_rhythm(int(size/2), volume*1) , generate_rhythm(int(size/2), volume*0.98) )    \n",
@@ -105,14 +127,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXoAAAD8CAYAAAB5Pm/hAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAELVJREFUeJzt3X+s3XV9x/Hnq9S5XX8ECBfG2t5e\nZhonmon0huBIFjfmRGYsJrJgEBtlqX+gw8VlA0mmydKFZJtuRmXphIHpHY4IBrIwlXRmZom/bhny\nw+rotJRCR+vclIxEB7z3x/lWbtvb3p+n55xPn4/km+85n/M5n/ui7X3dw+ecc0+qCklSu1YNOoAk\nqb8seklqnEUvSY2z6CWpcRa9JDXOopekxln0ktQ4i16SGmfRS1LjVg86AMAZZ5xRk5OTg44hSSNl\n586dP6iq8fnmDUXRT05OMjMzM+gYkjRSkjy2kHlu3UhS4yx6SWqcRS9JjbPoJalxFr0kNc6ilxo3\nPQ2Tk7BqVe88PT18a55s6/VrzWOqqoEfGzduLEkrb/v2qrGxKnjhGBvrjQ/Lmifbeiu5JjBTC+jY\n1BB8lODU1FT5Onpp5U1OwmNzvNJ6/XrYs2c41jzZ1lvJNZPsrKqp+ebNu3WTZF2SLyfZleSRJNd2\n4x9J8kSSB7rj0ln3uT7J7iTfTfKmhceWtJL27l3c+CDWPNnW69eax7OQPfpngQ9W1auAC4Frkpzb\n3faxqjqvO+4F6G67Ang1cAnwqSSn9CG7pHlMTCxufBBrnmzr9WvN45m36Ktqf1Xd311+GtgFrDnO\nXTYBn62qn1TV94HdwAUrEVbS4mzdCmNjh4+NjfXGh2XNk229fq15XAvZyD90AJPAXuDlwEeAPcCD\nwC3Aad2cTwDvnHWfm4G3H29dn4yV+mf79qr166uS3nk5TyL2a82Tbb2VWpOVfjI2yUuBfwG2VtVd\nSc4CfgAU8KfA2VX1niSfBL5aVdu7+90M3FtVdx6x3hZgC8DExMTGx+Z6ZkKSdEwr9mRst9iLgDuB\n6aq6C6Cqnqqq56rqeeBveWF7Zh+wbtbd1wJPHrlmVW2rqqmqmhofn/e3bEqSlmghr7oJve2XXVX1\n0VnjZ8+a9jbg4e7yPcAVSV6c5BxgA/CNlYssSVqMhfw++ouAq4CHkjzQjX0IeEeS8+ht3ewB3gtQ\nVY8kuQP4Nr1X7FxTVc+tdHBJ0sLMW/RV9a9A5rjp3uPcZyvQr+ePJUmL4O+6kaTGWfSS1DiLXpIa\nZ9FLUuMseklqnEUvSY2z6CWpcRa9JDXOopekxln0ktQ4i16SGmfRS1LjLHpJapxFL0mNs+glqXEW\nvSQ1zqKXpMZZ9JLUOItekhpn0UtS4yx6SWqcRS9JjbPoJalxFr0kNc6il6TGWfSS1DiLXpIaZ9FL\nUuMseklqnEUvSY2bt+iTrEvy5SS7kjyS5Npu/PQk9yV5tDuf1o0nyceT7E7yYJLz+/0fIUk6toU8\non8W+GBVvQq4ELgmybnAdcCOqtoA7OiuA7wZ2NAdW4CbVjw1MD0Nk5OwalXvPD3dj68iSaNv3qKv\nqv1VdX93+WlgF7AG2ATc1k27Dbisu7wJ+Ez1fA04NcnZKxl6ehq2bIHHHoOq3nnLFstekuayqD36\nJJPA64CvA2dV1X7o/TAAzuymrQEen3W3fd3YirnhBnjmmcPHnnmmNy5JOtyCiz7JS4E7gQ9U1Y+P\nN3WOsZpjvS1JZpLMHDx4cKExANi7d3HjUj+5jahht6CiT/IieiU/XVV3dcNPHdqS6c4HuvF9wLpZ\nd18LPHnkmlW1raqmqmpqfHx8UaEnJhY3LvWL24gaBQt51U2Am4FdVfXRWTfdA2zuLm8G7p41/q7u\n1TcXAj86tMWzUrZuhbGxw8fGxnrj0onkNqJGweoFzLkIuAp4KMkD3diHgBuBO5JcDewFLu9uuxe4\nFNgNPAO8e0UTA1de2TvfcENvu2Ziolfyh8alE8VtRI2CVB21fX7CTU1N1czMzKBjSIs2OdnbrjnS\n+vWwZ8+JTqOTTZKdVTU13zzfGSstg9uIGgUWvbQMV14J27b1HsEnvfO2bW4jargsZI9e0nFceaXF\nruHmI3pJapxFL0mNs+glqXEWvSQ1zqKXpMZZ9JLUOItekhpn0UtS4yx6SWqcRS9JjbPoJalxFr0k\nNc6il6TGWfSS1DiLXpIaZ9FLUuMseklqnEUvSY2z6CWpcRa9JDXOopekxln0ktQ4i16SGmfRS1Lj\nLHpJapxFL0mNs+glqXHzFn2SW5IcSPLwrLGPJHkiyQPdcems265PsjvJd5O8qV/BJUkLs5BH9LcC\nl8wx/rGqOq877gVIci5wBfDq7j6fSnLKSoWVJC3evEVfVV8BfrjA9TYBn62qn1TV94HdwAXLyCdJ\nWqbl7NG/L8mD3dbOad3YGuDxWXP2dWOSpAFZatHfBLwCOA/YD/xlN5455tZcCyTZkmQmyczBgweX\nGEOSNJ8lFX1VPVVVz1XV88Df8sL2zD5g3aypa4Enj7HGtqqaqqqp8fHxpcSQJC3Akoo+ydmzrr4N\nOPSKnHuAK5K8OMk5wAbgG8uLKElajtXzTUhyO/AG4Iwk+4APA29Ich69bZk9wHsBquqRJHcA3wae\nBa6pquf6E12StBCpmnML/YSampqqmZmZQceQpJGSZGdVTc03z3fGSlLjLHpJapxFL0mNs+glqXEW\nvSQ1zqKXpMZZ9JLUOItekhpn0UtS4yx6SWqcRS9JjbPoJalxFr0kNc6il6TGWfSS1DiLXpIaZ9FL\nUuMseklqnEUvSY2z6CWpcRa9JDXOopekxln0ktQ4i16SGmfRS1LjLHpJapxFL0mNs+glqXEWvSQ1\nzqKXpMbNW/RJbklyIMnDs8ZOT3Jfkke782ndeJJ8PMnuJA8mOb+f4SVJ81vII/pbgUuOGLsO2FFV\nG4Ad3XWANwMbumMLcNPKxJQkLdW8RV9VXwF+eMTwJuC27vJtwGWzxj9TPV8DTk1y9kqFlSQt3lL3\n6M+qqv0A3fnMbnwN8Pisefu6saMk2ZJkJsnMwYMHlxhDkjSflX4yNnOM1VwTq2pbVU1V1dT4+PgK\nx5AkHbLUon/q0JZMdz7Qje8D1s2atxZ4cunxJEnLtdSivwfY3F3eDNw9a/xd3atvLgR+dGiLR5I0\nGKvnm5DkduANwBlJ9gEfBm4E7khyNbAXuLybfi9wKbAbeAZ4dx8yS5IWYd6ir6p3HOOmi+eYW8A1\nyw0lSVo5vjNWkhpn0UtS4yx6SWqcRS9JjbPoJalxFr0kNc6il6TGWfSS1DiLXpIaZ9FLUuMseklq\nnEUvSY2z6CWpcRa9JDXOopekxln0ktQ4i16SGmfRS1LjLHpJapxFL0mNs+glqXEWvSQ1zqKXpMZZ\n9JLUOItekhpn0UtS4yx6SWqcRS9JjbPoJalxq5dz5yR7gKeB54Bnq2oqyenAPwCTwB7gd6vqv5cX\nU5K0VCvxiP43quq8qprqrl8H7KiqDcCO7rokaUD6sXWzCbitu3wbcFkfvoYkaYGWW/QFfCnJziRb\nurGzqmo/QHc+c5lfQ5K0DMvaowcuqqonk5wJ3JfkOwu9Y/eDYQvAxMTEMmNIko5lWY/oq+rJ7nwA\n+DxwAfBUkrMBuvOBY9x3W1VNVdXU+Pj4cmJIko5jyUWf5CVJXnboMvDbwMPAPcDmbtpm4O7lhpQk\nLd1ytm7OAj6f5NA6f19VX0jyTeCOJFcDe4HLlx9TkrRUSy76qvoe8No5xv8LuHg5oSRJK8d3xkpS\n4yx6SWqcRS9JjbPoJalxFr0kNc6il6TGWfSS1DiLXpIaZ9FLUuMseklqnEUvSY2z6CWpcRa9JDXO\nopekxln0ktQ4i16SGmfRS1LjLHpJapxFL0mNs+glqXEWvSQ1zqKXpMZZ9JLUOItekhpn0UtS4yx6\nSWqcRS9JjbPoJalxFr0kNc6il6TG9a3ok1yS5LtJdie5rl9fR5J0fH0p+iSnAJ8E3gycC7wjybn9\n+ForaXoaJidh1areeXq67fVGIeOwr9cPo5BRI6aqVvwAXg98cdb164HrjzV/48aNNWjbt1eNjVXB\nC8fYWG+8xfVGIeOwr9cPo5BRwwOYqYV08kImLfYA3g58etb1q4BPHGv+MBT9+vWHf3MdOtavb3O9\nUcg47Ov1wyhk1PBYaNGnN3dlJbkceFNV/V53/Srggqp6/6w5W4AtABMTExsfe+yxFc+xGKtW9b6l\njpTA88+3t14/1jzZ1uuHUcio4ZFkZ1VNzTevX0/G7gPWzbq+Fnhy9oSq2lZVU1U1NT4+3qcYCzcx\nsbjxUV+vH2uebOv1wyhk1OjpV9F/E9iQ5JwkPwdcAdzTp6+1IrZuhbGxw8fGxnrjLa7XjzVPtvX6\nYRQyagQtZH9nKQdwKfDvwH8ANxxv7jDs0Vf1nvBav74q6Z2X+wTYsK83ChmHfb1+GIWMGg4Mco9+\nsaampmpmZmbQMSRppAx6j16SNCQseklqnEUvSY2z6CWpcRa9JDVuKF51k+QgsNS3xp4B/GAF4/SD\nGZdv2PPB8Gcc9nww/BmHLd/6qpr3HadDUfTLkWRmIS8vGiQzLt+w54Phzzjs+WD4Mw57vmNx60aS\nGmfRS1LjWij6bYMOsABmXL5hzwfDn3HY88HwZxz2fHMa+T16SdLxtfCIXpJ0HCNd9MP+AeRJ1iX5\ncpJdSR5Jcu2gM80lySlJ/i3JPw46y1ySnJrkc0m+0/1Zvn7QmWZL8gfd3+/DSW5P8vNDkOmWJAeS\nPDxr7PQk9yV5tDufNoQZ/7z7e34wyeeTnDpM+Wbd9odJKskZg8i2WCNb9CPyAeTPAh+sqlcBFwLX\nDGFGgGuBXYMOcRx/DXyhqn4FeC1DlDXJGuD3gamqeg1wCr3PXxi0W4FLjhi7DthRVRuAHd31QbqV\nozPeB7ymqn6V3q85v/5Eh5rlVo7OR5J1wBuBvSc60FKNbNEDFwC7q+p7VfVT4LPApgFnOkxV7a+q\n+7vLT9MrqDWDTXW4JGuB3wE+Pegsc0nycuDXgZsBquqnVfU/g011lNXALyRZDYxxxKepDUJVfQX4\n4RHDm4Dbusu3AZed0FBHmCtjVX2pqp7trn6N3qfTDcQx/gwBPgb8ETAyT3COctGvAR6fdX0fQ1ai\nsyWZBF4HfH2wSY7yV/T+0Q7rJ5L+MnAQ+Ltue+nTSV4y6FCHVNUTwF/Qe3S3H/hRVX1psKmO6ayq\n2g+9ByHAmQPOM5/3AP806BCzJXkr8ERVfWvQWRZjlIs+c4wN5U/YJC8F7gQ+UFU/HnSeQ5K8BThQ\nVTsHneU4VgPnAzdV1euA/2XwWw4/0+1zbwLOAX4JeEmSdw421ehLcgO9rc/pQWc5JMkYcAPwJ4PO\nslijXPTzfgD5MEjyInolP11Vdw06zxEuAt6aZA+9ra/fTLJ9sJGOsg/YV1WH/k/oc/SKf1j8FvD9\nqjpYVf8H3AX82oAzHctTSc4G6M4HBpxnTkk2A28Brqzhev33K+j9QP9W9z2zFrg/yS8ONNUCjHLR\nD/0HkCcJvb3lXVX10UHnOVJVXV9Va6tqkt6f3z9X1VA9Gq2q/wQeT/LKbuhi4NsDjHSkvcCFSca6\nv++LGaIni49wD7C5u7wZuHuAWeaU5BLgj4G3VtUzg84zW1U9VFVnVtVk9z2zDzi/+zc61Ea26Lsn\nbN4HfJHeN9YdVfXIYFMd5SLgKnqPlB/ojksHHWoEvR+YTvIgcB7wZwPO8zPd/2l8DrgfeIje99TA\n3z2Z5Hbgq8Ark+xLcjVwI/DGJI/Se9XIjUOY8RPAy4D7uu+XvxmyfCPJd8ZKUuNG9hG9JGlhLHpJ\napxFL0mNs+glqXEWvSQ1zqKXpMZZ9JLUOItekhr3/46UiA4XxUxdAAAAAElFTkSuQmCC\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXoAAAD8CAYAAAB5Pm/hAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEwBJREFUeJzt3X+M5Hd93/Hn63yQ9CCRTbx2XdvnNdaFBig545XllIJo\nHBrjIhuikmC5zjWhPZBMCi1VY2MpRJVSoYYfbURrdIBrIy4ODsbFqpyEk4PiRopp9ow5zjmIf8Q/\nzr7ebewWUC8iPfvdP+a7Yby3dzu7M3sz89nnQxrNzGc+M/Pa73lf9/VnvnPfVBWSpHZtGncASdL6\nsuglqXEWvSQ1zqKXpMZZ9JLUOItekhpn0UtS4yx6SWqcRS9Jjds87gAAZ555Zs3Ozo47hiRNlb17\n9/5lVc2sNG8iin52dpb5+flxx5CkqZLkiUHmuXQjSY2z6CWpcRa9JDXOopekxln0ktS4FYs+yflJ\nvprkQJKHkry/G39Fkj1JHu6uz+jGk+S3kjySZF+S169X+N27YXYWNm3qXe/evV7vJEnTa5A9+mPA\nB6vqJ4DLgOuTvBq4Abi3qrYB93b3Ad4KbOsuO4GbR56aXqnv3AlPPAFVveudOy17SVpqxaKvqkNV\n9UB3+3vAAeBc4Grgtm7abcDbu9tXA5+rnvuB05OcM+rgN90ER4++eOzo0d64JOkHVrVGn2QWuBj4\nGnB2VR2C3l8GwFndtHOBp/qedrAbW/paO5PMJ5lfWFhYdfAnn1zduCRtVAMXfZKXA3cCH6iq755s\n6jJjx52BvKp2VdVcVc3NzKz4Dd7jbN26unEtz885huc21KQbqOiTvIReye+uqi91w4cXl2S66yPd\n+EHg/L6nnwc8M5q4P/AbvwFbtrx4bMuW3rgG4+ccw3MbahoMctRNgM8CB6rq430P3Q3s6G7vAL7c\nN/6L3dE3lwHfWVziGaVrr4Vdu+CCCyDpXe/a1RvXYPycY3huQ02DVB23qvLiCck/AP4H8E3ghW74\nQ/TW6e8AtgJPAu+sque6vxg+CVwBHAV+qapO+i+Wzc3Nlf+o2am3aVNvL3SpBF544fhxHc9tqHFK\nsreq5laaN8hRN39cVamq11XV9u5yT1U9W1WXV9W27vq5bn5V1fVVdVFV/b2VSl6DG/VasJ9zDM9t\nqGngN2OnxHqsBfs5x/DchpoGFv2UWI+1YD/nGJ7bUNNgxTX6U8E1+pW5FixpqZGt0WsyuBY8Oh73\nro3Gop8SrgWPhse9ayOy6KeEa8Gj4XHv2ohco9eG4mcdaolr9NIy/KxDG5FFrw3Fzzq0EVn02lD8\nrEMb0eZxB5BOtWuvtdi1sbhHL0mNs+glqXEWvSQ1zqKXpMYNcoapW5IcSbK/b+wLSR7sLo8nebAb\nn03yV32PfWo9w0uSVjbIUTe30jtj1OcWB6rqFxZvJ/kY8J2++Y9W1fZRBZQkDWfFoq+q+5LMLvdY\nd9rAnwd+erSxJEmjMuwa/RuBw1X1cN/YhUm+nuSPkrxxyNeXJA1p2C9MXQPc3nf/ELC1qp5Ncgnw\n35K8pqq+u/SJSXYCOwG2+g+NSNK6WfMefZLNwM8BX1gcq6rvV9Wz3e29wKPAjy/3/KraVVVzVTU3\nMzOz1hiSpBUMs3TzM8C3qurg4kCSmSSndbdfCWwDHhsuoiRpGIMcXnk78CfAq5IcTPLu7qF38eJl\nG4A3AfuSfAP4IvDeqnpulIElSaszyFE315xg/J8tM3YncOfwsSRJo+I3YyWpcRa9JDXOopekxln0\nktQ4i16SGmfRS1LjLHpJapxFL0mNs+glqXEWvSQ1zqKXpMZZ9JLUOItekhpn0UtS4yx6SWqcRS9J\njRvkDFO3JDmSZH/f2K8neTrJg93lyr7HbkzySJJvJ/nZ9QouSRrMIHv0twJXLDP+iara3l3uAUjy\nanqnGHxN95z/sngOWUnSeKxY9FV1HzDoeV+vBn6nqr5fVX8BPAJcOkQ+SdKQhlmjf1+Sfd3Szhnd\n2LnAU31zDnZjkqQxWWvR3wxcBGwHDgEf68azzNxa7gWS7Ewyn2R+YWFhjTEkSStZU9FX1eGqer6q\nXgA+zQ+WZw4C5/dNPQ945gSvsauq5qpqbmZmZi0xJEkDWFPRJzmn7+47gMUjcu4G3pXkh5JcCGwD\n/udwESVJw9i80oQktwNvBs5MchD4MPDmJNvpLcs8DrwHoKoeSnIH8GfAMeD6qnp+faJLkgaRqmWX\n0E+pubm5mp+fH3cMSZoqSfZW1dxK8/xmrCQ1zqKXpMZZ9JLUOItekhpn0UtS4yx6SWqcRS9JjbPo\nJalxFr0kNc6il6TGWfSS1DiLXpIaZ9FLUuMseklqnEUvSY2z6CWpcSsWfZJbkhxJsr9v7DeTfCvJ\nviR3JTm9G59N8ldJHuwun1rP8JKklQ2yR38rcMWSsT3Aa6vqdcCfAzf2PfZoVW3vLu8dTUxJ0lqt\nWPRVdR/w3JKxr1TVse7u/cB565BNkjQCo1ij/2Xg9/ruX5jk60n+KMkbT/SkJDuTzCeZX1hYGEEM\nSdJyhir6JDcBx4Dd3dAhYGtVXQz8a+C3k/zocs+tql1VNVdVczMzM8PEkCSdxJqLPskO4G3AtVVV\nAFX1/ap6tru9F3gU+PFRBJUkrc2aij7JFcCvAldV1dG+8Zkkp3W3XwlsAx4bRVBJ0tpsXmlCktuB\nNwNnJjkIfJjeUTY/BOxJAnB/d4TNm4B/l+QY8Dzw3qp6btkXliSdEisWfVVds8zwZ08w907gzmFD\nSZJGx2/GSlLjLHpJapxFL0mNs+glqXEWvSQ1zqKXpMZZ9JLUOItekhpn0UtS4yx6SWqcRS9JjbPo\nJalxFr0kNc6il6TGWfSS1LiBij7JLUmOJNnfN/aKJHuSPNxdn9GNJ8lvJXkkyb4kr1+v8JKklQ26\nR38rcMWSsRuAe6tqG3Bvdx/grfROIbgN2AncPHxMSdJaDVT0VXUfsPSUgFcDt3W3bwPe3jf+ueq5\nHzg9yTmjCCtJWr1h1ujPrqpDAN31Wd34ucBTffMOdmOSpDFYjw9js8xYHTcp2ZlkPsn8wsLCOsSQ\nJMFwRX94cUmmuz7SjR8Ezu+bdx7wzNInV9WuqpqrqrmZmZkhYkiSTmaYor8b2NHd3gF8uW/8F7uj\nby4DvrO4xCNJOvU2DzIpye3Am4EzkxwEPgx8BLgjybuBJ4F3dtPvAa4EHgGOAr804sySpFUYqOir\n6poTPHT5MnMLuH6YUJKk0fGbsZLUOItekhpn0UtS4yx6SWqcRS9JjbPoJalxFr0kNc6il6TGWfSS\n1DiLXpIaZ9FLUuMseklqnEUvSY2z6CWpcRa9JDXOopekxg104pHlJHkV8IW+oVcCvwacDvwLYPGM\n3x+qqnvWnFCSNJQ1F31VfRvYDpDkNOBp4C56pw78RFV9dCQJJUlDGdXSzeXAo1X1xIheT5I0IqMq\n+ncBt/fdf1+SfUluSXLGiN5DkrQGQxd9kpcCVwG/2w3dDFxEb1nnEPCxEzxvZ5L5JPMLCwvLTZEk\njcAo9ujfCjxQVYcBqupwVT1fVS8AnwYuXe5JVbWrquaqam5mZmYEMSRJyxlF0V9D37JNknP6HnsH\nsH8E7yFJWqM1H3UDkGQL8BbgPX3D/yHJdqCAx5c8Jkk6xYYq+qo6CvzYkrHrhkokSRopvxkrSY2z\n6CWpcRa9JDXOopekxln0ktQ4i16SGmfRS1LjLHpJapxFL0mNs+glqXEWvSQ1zqKXpMZZ9JLUOIte\nkhpn0UtS4yx6SWrcUCceAUjyOPA94HngWFXNJXkF8AVglt5Zpn6+qv73sO8lSVq9Ue3R/8Oq2l5V\nc939G4B7q2obcG93X5I0Buu1dHM1cFt3+zbg7ev0PpKkFYyi6Av4SpK9SXZ2Y2dX1SGA7vqspU9K\nsjPJfJL5hYWFEcSQJC1n6DV64A1V9UySs4A9Sb41yJOqahewC2Bubq5GkEOStIyh9+ir6pnu+ghw\nF3ApcDjJOQDd9ZFh30eStDZDFX2SlyX5kcXbwD8C9gN3Azu6aTuALw/zPpKktRt26eZs4K4ki6/1\n21X1+0n+FLgjybuBJ4F3Dvk+kqQ1Gqroq+ox4CeXGX8WuHyY15YkjYbfjJWkxln0ktQ4i16SGmfR\nS1LjLHpJapxFL0mNs+glqXEWvSQ1zqKXpMZZ9JLUOItekhpn0UtS4yx6SWqcRS9JjbPoJalxFr0k\nNW7NRZ/k/CRfTXIgyUNJ3t+N/3qSp5M82F2uHF1cSdJqDXOGqWPAB6vqge68sXuT7Oke+0RVfXT4\neJKkYa256KvqEHCou/29JAeAc0cVTJI0GiNZo08yC1wMfK0bel+SfUluSXLGCZ6zM8l8kvmFhYVR\nxJAkLWPook/ycuBO4ANV9V3gZuAiYDu9Pf6PLfe8qtpVVXNVNTczMzNsDEnSCQxV9EleQq/kd1fV\nlwCq6nBVPV9VLwCfBi4dPqYkaa2GOeomwGeBA1X18b7xc/qmvQPYv/Z4kqRhDXPUzRuA64BvJnmw\nG/sQcE2S7UABjwPvGSqhJGkowxx188dAlnnonrXHkSSNmt+MlaTGWfSS1DiLXpIaZ9FLUuMseklq\nnEUvSY2z6CWpcRa9JDXOopekxln0ktQ4i16SGmfRS1LjLHpJapxFL0mNs+glqXHrVvRJrkjy7SSP\nJLlhvd5HknRy61L0SU4D/jPwVuDV9M469er1eK9R2r0bZmdh06be9e7dk/V608BtOLxp2IaTnnEj\n/swnVVUjvwA/BfxB3/0bgRtPNP+SSy6pcfv856u2bKmCH1y2bOmNT8LrTQO34fCmYRtOesaN9DMD\n8zVIJw8yabUX4J8An+m7fx3wyRPNn4Siv+CCF2/0xcsFF0zG600Dt+HwpmEbTnrGjfQzD1r06c0d\nrSTvBH62qv55d/864NKq+pW+OTuBnQBbt2695Iknnhh5jtXYtKm3qZdK4IUXxv9608BtOLxp2IaT\nnnEj/cxJ9lbV3Irvt5pwq3AQOL/v/nnAM/0TqmpXVc1V1dzMzMw6xRjc1q2rGz/VrzcN3IbDm4Zt\nOOkZN+LPvKJBdvtXewE2A48BFwIvBb4BvOZE8ydh6WZS1+CmidtweNOwDSc940b6mRnnGn3v/bkS\n+HPgUeCmk82dhKKv6m3kCy6oSnrXwxbKqF9vGrgNhzcN23DSM26Un3nQol+XNfrVmpubq/n5+XHH\nkKSpMu41eknShLDoJalxFr0kNc6il6TGWfSS1LiJOOomyQIwzFdjzwT+ckRx1sOk54PJzzjp+WDy\nM056PjDjal1QVSt+43Qiin5YSeYHOcRoXCY9H0x+xknPB5OfcdLzgRnXi0s3ktQ4i16SGtdK0e8a\nd4AVTHo+mPyMk54PJj/jpOcDM66LJtboJUkn1soevSTpBKa66Cf9BORJzk/y1SQHkjyU5P3jzrSc\nJKcl+XqS/z7uLMtJcnqSLyb5Vrctf2rcmfol+Vfdn+/+JLcn+eEJyHRLkiNJ9veNvSLJniQPd9dn\nTGDG3+z+nPcluSvJ6ZOUr++xf5Okkpw5jmyrNbVFPyUnID8GfLCqfgK4DLh+AjMCvB84MO4QJ/Gf\ngN+vqr8L/CQTlDXJucC/BOaq6rXAacC7xpsKgFuBK5aM3QDcW1XbgHu7++N0K8dn3AO8tqpeR++f\nOb/xVIfqcyvH5yPJ+cBbgCdPdaC1mtqiBy4FHqmqx6rqr4HfAa4ec6YXqapDVfVAd/t79Arq3PGm\nerEk5wH/GPjMuLMsJ8mPAm8CPgtQVX9dVf9nvKmOsxn4W0k2A1tYcja1caiq+4DnlgxfDdzW3b4N\nePspDbXEchmr6itVday7ez+9s9ONxQm2IcAngH8LTM0HnNNc9OcCT/XdP8iElWi/JLPAxcDXxpvk\nOP+R3n+0k3oW1lcCC8B/7ZaXPpPkZeMOtaiqngY+Sm/v7hDwnar6ynhTndDZVXUIejshwFljzrOS\nXwZ+b9wh+iW5Cni6qr4x7iyrMc1Fn2XGJvJv2CQvB+4EPlBV3x13nkVJ3gYcqaq9485yEpuB1wM3\nV9XFwP9l/EsOf6Nb576a3mkz/w7wsiT/dLyppl+Sm+gtfe4ed5ZFSbYANwG/Nu4sqzXNRb/iCcgn\nQZKX0Cv53VX1pXHnWeINwFVJHqe39PXTST4/3kjHOQgcrKrF/xP6Ir3inxQ/A/xFVS1U1f8DvgT8\n/TFnOpHDSc4B6K6PjDnPspLsAN4GXFuTdfz3RfT+Qv9G9ztzHvBAkr891lQDmOai/1NgW5ILk7yU\n3gdgd48504skCb215QNV9fFx51mqqm6sqvOqapbe9vvDqpqovdGq+l/AU0le1Q1dDvzZGCMt9SRw\nWZIt3Z/35UzQh8VL3A3s6G7vAL48xizLSnIF8KvAVVV1dNx5+lXVN6vqrKqa7X5nDgKv7/4bnWhT\nW/TdBzbvA/6A3i/WHVX10HhTHecNwHX09pQf7C5XjjvUFPoVYHeSfcB24N+POc/f6P5P44vAA8A3\n6f1Ojf2bk0luB/4EeFWSg0neDXwEeEuSh+kdNfKRCcz4SeBHgD3d78unJizfVPKbsZLUuKndo5ck\nDcail6TGWfSS1DiLXpIaZ9FLUuMseklqnEUvSY2z6CWpcf8f3c2mChZzXWkAAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x1d5dc368be0>"
+       "<matplotlib.figure.Figure at 0x1fb2eee6f98>"
       ]
      },
      "metadata": {},
@@ -155,12 +177,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Me\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:20: RuntimeWarning: divide by zero encountered in true_divide\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4.0"
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def WNBD(rhythm):\n",
+    "    meter = 4\n",
+    "    beats = np.nonzero(rhythm)[0]\n",
+    "    length = len(beats)\n",
+    "    \n",
+    "    T = np.zeros(length) # as in the paper\n",
+    "    W = np.zeros(length) # denominator weight for (finishes before meter, after meter...)\n",
+    "    D = np.zeros(length) # as in the paper\n",
+    "    \n",
+    "    T = np.minimum(beats % meter, -beats % meter)        \n",
+    "    \n",
+    "    for i in range(length-1): # length-1 because last beat has no next beat\n",
+    "        W[i] = int(beats[i+1]/4) - int(beats[i]/4) + 1\n",
+    "        if (W[i] > 2):\n",
+    "            W[i] = 1\n",
+    "    W[length-1] = int(len(rhythm)/4) - int(beats[length-1]/4) + 1 # last beat special case\n",
+    "    if (W[length-1] > 2): \n",
+    "        W[length-1] = 1\n",
+    "    \n",
+    "    D = (W/T)[T !=0] # avoid div/0\n",
+    "    return np.sum(D)\n",
+    "\n",
+    "WNBD(rhythm)"
+   ]
   }
  ],
  "metadata": {
@@ -179,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
