--- a/Grammar.ipynb
+++ b/Grammar.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -18,9 +19,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 1.9.4\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n",
+      "Playing test.mid\n",
+      "\n",
+      "Saving test.wav\n"
+     ]
+    }
+   ],
    "source": [
     "#Imports\n",
     "import numpy as np\n",
@@ -33,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -46,12 +59,12 @@
     "\n",
     "p1 = 0.725 # Split 2 prob\n",
     "p2 = 0.275 # Play beat prob (p3 is computed automatically)\n",
-    "p4 = 1 # Play beat in final level; NOT MANDATORY, can be automatic of not defined "
+    "p4 = 1 # Play beat in final level; NOT MANDATORY, can be automatic if not defined "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -94,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -124,14 +137,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXoAAAD8CAYAAAB5Pm/hAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAE0BJREFUeJzt3X2sZPV93/H3Z1k77dqJwOVCKbB7Mdq4sV1nMVeIFNly\nQ9xgaoFd1akRJduEdm0Jp3brqgEjxVElV1bjhzZyi7W2KVjeEFNjalSRxIhaQZGCm7sYryFrh4fw\nsLDdvYHWtkrkdOHbP+bcMNy9lzv3zszOzC/vlzSaOb85c+Zznz57+J0znFQVkqR2bZl0AEnSeFn0\nktQ4i16SGmfRS1LjLHpJapxFL0mNs+glqXEWvSQ1zqKXpMZtnXQAgFNPPbXm5+cnHUOSZsr+/fv/\nrKrm1ltvKop+fn6excXFSceQpJmS5PFB1nPqRpIat27RJzk7yTeSHEzyYJIPduOvSXJXkoe6+1O6\n8ST5zSQPJzmQ5M3j/iIkSWsbZI/+GPDhqvop4ELgmiSvB64F7q6qncDd3TLAO4Cd3W0PcMPIU0uS\nBrZu0VfV4aq6r3v8Q+AgcCZwOXBzt9rNwLu6x5cDX6yee4GTk5wx8uSSpIFsaI4+yTxwHvBN4PSq\nOgy9fwyA07rVzgSe7HvZoW5s5bb2JFlMsri0tLTx5JKkgQxc9EleDdwGfKiqfvByq64ydtzVTapq\nb1UtVNXC3Ny6Zwetat8+mJ+HLVt69/v2bWozktS0gU6vTPIKeiW/r6q+2g0fSXJGVR3upmaOduOH\ngLP7Xn4W8PSoAi/btw/27IHnnustP/54bxngyitH/W6SNLsGOesmwBeAg1X1qb6n7gB2d493A1/r\nG//F7uybC4HvL0/xjNL1179Y8suee643Lkl60SB79BcBVwHfSXJ/N/YR4OPArUmuBp4A3tM9dydw\nKfAw8BzwSyNN3HniiY2NS9JfVYOcdfMHVZWqelNV7epud1bVM1V1cVXt7O6f7davqrqmqs6tqr9T\nVWP5yOv27RsblzS9PN42XjP7ydiPfQy2bXvp2LZtvXFJs2P5eNvjj0PVi8fbLPvRmdmiv/JK2LsX\nduyApHe/d68HYqVZ4/G28UvVcWc+nnALCwvl/9RM+qtpy5benvxKCbzwwonPM0uS7K+qhfXWm9k9\nemlaOL88HI+3jZ9FLw3B+eXhebxt/Cx6aQjOLw/P423j5xy9NATnlzVJztFLJ8AszC+P4xiCxyVm\ni0UvDWHa55fHcQzB4xKzx6kbaUj79vXm5J94orcn/7GPTc/88vx8r4hX2rEDHntserapzRl06sai\nlxo2jmMIHpeYHs7RSxrLMYRZOC6hl7LopYaN4xjCtB+X0PEseqlh4zhH3fPeZ49z9JI0o5yjlyQB\ng11K8MYkR5M80Df25ST3d7fHlq88lWQ+yZ/3PffZcYaXJK1vkEsJ3gR8Bvji8kBV/ePlx0k+CXy/\nb/1HqmrXqAJKkoazbtFX1T1J5ld7rrtw+C8APzvaWJKkURl2jv4twJGqeqhv7Jwk30ry+0nestYL\nk+xJsphkcWlpacgYkqS1DFv0VwC39C0fBrZX1XnAvwJ+K8lPrPbCqtpbVQtVtTA3NzdkDEnSWjZd\n9Em2Av8Q+PLyWFX9qKqe6R7vBx4BfnLYkJKkzRtmj/7ngO9W1aHlgSRzSU7qHr8W2Ak8OlxESdIw\nBjm98hbgD4HXJTmU5Oruqffy0mkbgLcCB5J8G/gK8P6qenaUgSVJGzPIWTdXrDH+T1cZuw24bfhY\nkqRR8ZOxktQ4i16SGmfRS1LjLHpJapxFL0mNs+glqXEWvSQ1zqKXpMZZ9JLUOItekhpn0UtS4yx6\nSWqcRS9JjbPoJalxFr0kNc6il6TGDXKFqRuTHE3yQN/Yryd5Ksn93e3SvueuS/Jwku8l+flxBZck\nDWaQPfqbgEtWGf90Ve3qbncCJHk9vUsMvqF7zX9evoasJGky1i36qroHGPS6r5cDv11VP6qqPwUe\nBi4YIp8kaUjDzNF/IMmBbmrnlG7sTODJvnUOdWOSpAnZbNHfAJwL7AIOA5/sxrPKurXaBpLsSbKY\nZHFpaWmTMSRJ69lU0VfVkap6vqpeAD7Hi9Mzh4Cz+1Y9C3h6jW3sraqFqlqYm5vbTAxJ0gA2VfRJ\nzuhbfDewfEbOHcB7k/xYknOAncD/HC6iJGkYW9dbIcktwNuAU5McAj4KvC3JLnrTMo8B7wOoqgeT\n3Ar8MXAMuKaqnh9PdEnSIFK16hT6CbWwsFCLi4uTjiFJMyXJ/qpaWG89PxkrSY2z6CWpcRa9JDXO\nopekxln0ktQ4i16SGmfRS1LjLHpJapxFL0mNs+glqXEWvSQ1zqKXpMZZ9JLUOItekhpn0UtS4yx6\nSWrcukWf5MYkR5M80Df2G0m+m+RAktuTnNyNzyf58yT3d7fPjjO8JGl9g+zR3wRcsmLsLuCNVfUm\n4E+A6/qee6SqdnW3948mpiRps9Yt+qq6B3h2xdjXq+pYt3gvcNYYskmSRmAUc/S/DPxO3/I5Sb6V\n5PeTvGUE25ckDWHrMC9Ocj1wDNjXDR0GtlfVM0nOB/5bkjdU1Q9Wee0eYA/A9u3bh4khSXoZm96j\nT7IbeCdwZVUVQFX9qKqe6R7vBx4BfnK111fV3qpaqKqFubm5zcaQJK1jU0Wf5BLgV4HLquq5vvG5\nJCd1j18L7AQeHUVQSdLmrDt1k+QW4G3AqUkOAR+ld5bNjwF3JQG4tzvD5q3Av01yDHgeeH9VPbvq\nhiVJJ8S6RV9VV6wy/IU11r0NuG3YUJKk0fGTsZLUOItekhpn0UtS4yx6SWqcRS9JjbPoJalxFr0k\nNc6il6TGWfSS1DiLXpIaZ9FLUuMseklqnEUvSY2z6CWpcRa9JDXOopekxg1U9EluTHI0yQN9Y69J\ncleSh7r7U7rxJPnNJA8nOZDkzeMKL0la36B79DcBl6wYuxa4u6p2And3ywDvoHet2J3AHuCG4WNK\nkjZroKKvqnuAldd+vRy4uXt8M/CuvvEvVs+9wMlJzhhFWEnSxg0zR396VR0G6O5P68bPBJ7sW+9Q\nNyZJmoBxHIzNKmN13ErJniSLSRaXlpbGEEOSBMMV/ZHlKZnu/mg3fgg4u2+9s4CnV764qvZW1UJV\nLczNzQ0RQ5L0coYp+juA3d3j3cDX+sZ/sTv75kLg+8tTPJKkE2/rICsluQV4G3BqkkPAR4GPA7cm\nuRp4AnhPt/qdwKXAw8BzwC+NOLMkaQMGKvqqumKNpy5eZd0CrhkmlCRpdPxkrCQ1zqKXpMZZ9JLU\nOItekhpn0UtS4yx6SWqcRS9JjbPoJalxFr0kNc6il6TGWfSS1DiLXpIaZ9FLUuMseklqnEUvSY2z\n6CWpcRa9JDVuoCtMrSbJ64Av9w29Fvg14GTgnwNL3fhHqurOTSeUJA1l00VfVd8DdgEkOQl4Crid\n3jViP11VnxhJQknSUEY1dXMx8EhVPT6i7UmSRmRURf9e4Ja+5Q8kOZDkxiSnrPaCJHuSLCZZXFpa\nWm0VSdIIDF30SV4JXAb8127oBuBcetM6h4FPrva6qtpbVQtVtTA3NzdsDEnSGkaxR/8O4L6qOgJQ\nVUeq6vmqegH4HHDBCN5DkrRJoyj6K+ibtklyRt9z7wYeGMF7SJI2adNn3QAk2Qa8HXhf3/C/T7IL\nKOCxFc9Jkk6woYq+qp4D/saKsauGSiRJGik/GStJjbPoJalxFr0kNc6il6TGWfSS1DiLXpIaZ9FL\nUuMseklqnEUvSY2z6CWpcRa9JDXOopekxln0ktQ4i16SGmfRS1LjLHpJatxQFx4BSPIY8EPgeeBY\nVS0keQ3wZWCe3lWmfqGq/vew7yVJ2rhR7dH/varaVVUL3fK1wN1VtRO4u1uWJE3AuKZuLgdu7h7f\nDLxrTO8jSVrHKIq+gK8n2Z9kTzd2elUdBujuT1v5oiR7kiwmWVxaWhpBDEnSaoaeowcuqqqnk5wG\n3JXku4O8qKr2AnsBFhYWagQ5JEmrGHqPvqqe7u6PArcDFwBHkpwB0N0fHfZ9JEmbM1TRJ3lVkh9f\nfgz8feAB4A5gd7fabuBrw7yPJGnzhp26OR24Pcnytn6rqn43yR8Btya5GngCeM+Q7yNJ2qShir6q\nHgV+epXxZ4CLh9m2JGk0/GSsJDXOopekxln0ktQ4i16SGmfRS1LjLHpJapxFL0mNs+glqXEWvSQ1\nzqKXpMZZ9JLUOItekhpn0UtS4yx6SWqcRS9JjbPoJalxmy76JGcn+UaSg0keTPLBbvzXkzyV5P7u\nduno4kqSNmqYK0wdAz5cVfd1143dn+Su7rlPV9Unho8nSRrWpou+qg4Dh7vHP0xyEDhzVMEkSaMx\nkjn6JPPAecA3u6EPJDmQ5MYkp4ziPSRJmzN00Sd5NXAb8KGq+gFwA3AusIveHv8n13jdniSLSRaX\nlpaGjSFJWsNQRZ/kFfRKfl9VfRWgqo5U1fNV9QLwOeCC1V5bVXuraqGqFubm5oaJIUl6GcOcdRPg\nC8DBqvpU3/gZfau9G3hg8/EkScMa5qybi4CrgO8kub8b+whwRZJdQAGPAe8bKqEkaSjDnHXzB0BW\neerOzceRJI2an4yVpMZZ9JLUOItekhpn0UtS4yx6SWqcRS9JjbPoJalxFr0kNc6il6TGWfSS1DiL\nXpIaZ9FLUuMseklqnEUvSY2z6CWpcRa9JDVubEWf5JIk30vycJJrx/U+kqSXN5aiT3IS8J+AdwCv\np3d5wdeP471Gad8+mJ+HLVt69/v2tb29Wcg4C1/zqE17vlkwC783J/TnXFUjvwE/A/xe3/J1wHVr\nrX/++efXpH3pS1XbtlXBi7dt23rjLW5vFjLOwtc8atOebxbMwu/NqLYHLNYgnTzIShu9Af8I+Hzf\n8lXAZ9ZafxqKfseOl37Tl287drS5vVnIOAtf86hNe75ZMAu/N6Pa3qBFn966o5XkPcDPV9U/65av\nAi6oql/pW2cPsAdg+/bt5z/++OMjz7ERW7b0vtUrJfDCC+1tbxzbnPbtjWubozTt+WbBLPzejGp7\nSfZX1cK677eRcBtwCDi7b/ks4On+Fapqb1UtVNXC3NzcmGIMbvv2jY3P+vbGsc1p3964tjlK055v\nFszC780J/zkPstu/0RuwFXgUOAd4JfBt4A1rrT8NUzfTOgc3ru3NQsZZ+JpHbdrzzYJZ+L1pYo6+\n9/5cCvwJ8Ahw/cutOw1FX9X7Ju/YUZX07of945r27c1Cxln4mkdt2vPNgln4vRnF9gYt+rHM0W/U\nwsJCLS4uTjqGJM2USc/RS5KmhEUvSY2z6CWpcRa9JDXOopekxk3FWTdJloBhPhp7KvBnI4ozDtOe\nD6Y/47Tng+nPOO35wIwbtaOq1v3E6VQU/bCSLA5yitGkTHs+mP6M054Ppj/jtOcDM46LUzeS1DiL\nXpIa10rR7510gHVMez6Y/ozTng+mP+O05wMzjkUTc/SSpLW1skcvSVrDTBf9tF+APMnZSb6R5GCS\nB5N8cNKZVpPkpCTfSvLfJ51lNUlOTvKVJN/tvpc/M+lM/ZL8y+7n+0CSW5L8tSnIdGOSo0ke6Bt7\nTZK7kjzU3Z8yhRl/o/s5H0hye5KTpylf33P/OkklOXUS2TZqZot+Ri5Afgz4cFX9FHAhcM0UZgT4\nIHBw0iFexn8Efreq/jbw00xR1iRnAv8CWKiqNwInAe+dbCoAbgIuWTF2LXB3Ve0E7u6WJ+kmjs94\nF/DGqnoTvf/N+XUnOlSfmzg+H0nOBt4OPHGiA23WzBY9cAHwcFU9WlV/Afw2cPmEM71EVR2uqvu6\nxz+kV1BnTjbVSyU5C/gHwOcnnWU1SX4CeCvwBYCq+ouq+j+TTXWcrcBfT7IV2MaKq6lNQlXdAzy7\nYvhy4Obu8c3Au05oqBVWy1hVX6+qY93ivfSuTjcRa3wPAT4N/BtgZg5wznLRnwk82bd8iCkr0X5J\n5oHzgG9ONslx/gO9X9ppvSLpa4El4L9000ufT/KqSYdaVlVPAZ+gt3d3GPh+VX19sqnWdHpVHYbe\nTghw2oTzrOeXgd+ZdIh+SS4Dnqqqb086y0bMctFnlbGp/Bc2yauB24APVdUPJp1nWZJ3Akerav+k\ns7yMrcCbgRuq6jzg/zL5KYe/1M1zX07vspl/C3hVkn8y2VSzL8n19KY+9006y7Ik24DrgV+bdJaN\nmuWiX/cC5NMgySvolfy+qvrqpPOscBFwWZLH6E19/WySL0020nEOAYeqavm/hL5Cr/inxc8Bf1pV\nS1X1/4CvAn93wpnWciTJGQDd/dEJ51lVkt3AO4Era7rO/z6X3j/o3+7+Zs4C7kvyNyeaagCzXPR/\nBOxMck6SV9I7AHbHhDO9RJLQm1s+WFWfmnSelarquqo6q6rm6X3//kdVTdXeaFX9L+DJJK/rhi4G\n/niCkVZ6Argwybbu530xU3SweIU7gN3d493A1yaYZVVJLgF+Fbisqp6bdJ5+VfWdqjqtqua7v5lD\nwJu739GpNrNF3x2w+QDwe/T+sG6tqgcnm+o4FwFX0dtTvr+7XTrpUDPoV4B9SQ4Au4B/N+E8f6n7\nL42vAPcB36H3NzXxT04muQX4Q+B1SQ4luRr4OPD2JA/RO2vk41OY8TPAjwN3dX8vn52yfDPJT8ZK\nUuNmdo9ekjQYi16SGmfRS1LjLHpJapxFL0mNs+glqXEWvSQ1zqKXpMb9f2j/svSbPgCZAAAAAElF\nTkSuQmCC\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXoAAAD8CAYAAAB5Pm/hAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEzNJREFUeJzt3X+M5PV93/HnC3DSrp0IXBZKgbvF6OLGcZ3DrBApsuWG\nuMHUAjuqUyNKrgnt2RJO7dZVA0aKo0qurMY/2sgt1tmmYHEhpsbEqCKJT9QKihTc7GF8PoIdwOHg\n4Hq3gda2SuT04N0/5rth2NtjZ3dmbmY+fj6kr+b7fc93PvPevdnXfu8z39lvqgpJUrtOmnQDkqTx\nMuglqXEGvSQ1zqCXpMYZ9JLUOINekhpn0EtS4wx6SWqcQS9JjTtl0g0AnH766bWwsDDpNiRppuzd\nu/cvqmp+vf2mIugXFhZYWlqadBuSNFOSHBhkP6duJKlx6wZ9knOTfDXJw0keSvL+rv7qJHuSPNLd\nntbVk+S3kjyaZF+SN477i5AkHd8gR/RHgQ9W1U8CFwPXJXkdcD1wb1VtA+7ttgHeBmzrlp3ATSPv\nWpI0sHWDvqoOVdUD3fr3gYeBs4ErgVu73W4F3tGtXwl8vnruB05NctbIO5ckDWRDc/RJFoALgK8B\nZ1bVIej9MgDO6HY7G3iy72EHu9rqsXYmWUqytLy8vPHOJUkDGTjok7wKuBP4QFV97+V2XaN2zNVN\nqmpXVS1W1eL8/LpnB61p925YWICTTurd7t69qWEkqWkDnV6Z5BX0Qn53VX2pKx9OclZVHeqmZo50\n9YPAuX0PPwd4elQNr9i9G3buhOee620fONDbBrj66lE/myTNrkHOugnwOeDhqvpE3113Azu69R3A\nl/vqv9SdfXMx8N2VKZ5RuvHGF0N+xXPP9eqSpBcNckR/CXAN8M0kD3a1DwEfBe5Ici3wBPCu7r57\ngMuBR4HngF8eacedJ57YWF2SflgNctbNH1VVquoNVbW9W+6pqmeq6tKq2tbdPtvtX1V1XVWdX1V/\nr6rG8pHXLVs2Vpc0vXy/bbxm9pOxH/kIzM29tDY316tLmh0r77cdOABVL77fZtiPzswG/dVXw65d\nsHUrJL3bXbt8I1aaNb7fNn6pOubMxxNucXGx/KNm0g+nk07qHcmvlsALL5z4fmZJkr1VtbjefjN7\nRC+pDb7fNn4GvaSJ8v228TPoJU2U77eN31RceETSD7errzbYx8kjemlIoz4HfNrHG9eYGqOqmvhy\n4YUXljSLbrutam6uqnfeSG+Zm+vVWxxvXGNqc4ClGiBjPb1SGsLCQu8DPqtt3QqPP97eeOMaU5sz\n6OmVBr00hFGfAz7t441rTG2O59FLJ8CozwGf9vHGNabGy6CXhjDqc8CnfbxxjanxMuilIYz6HPBp\nH29cY2q8nKOXpBnlHL0kCRjsUoI3JzmSZH9f7QtJHuyWx1euPJVkIclf9t336XE2L0la3yB/AuEW\n4FPA51cKVfVPVtaTfBz4bt/+j1XV9lE1KEkazrpBX1X3JVlY677uwuG/CPzsaNuSJI3KsHP0bwIO\nV9UjfbXzknw9yR8medPxHphkZ5KlJEvLy8tDtiFJOp5hg/4q4Pa+7UPAlqq6APjXwG8n+fG1HlhV\nu6pqsaoW5+fnh2xDknQ8mw76JKcAvwB8YaVWVT+oqme69b3AY8BPDNukJGnzhjmi/zngW1V1cKWQ\nZD7Jyd36a4BtwHeGa1GSNIxBTq+8Hfhj4LVJDia5trvr3bx02gbgzcC+JN8Avgi8t6qeHWXDkqSN\nGeSsm6uOU/9na9TuBO4cvi1J0qj4yVhJapxBL0mNM+glqXEGvSQ1zqCXpMYZ9JLUOINekhpn0EtS\n4wx6SWqcQS9JjTPoJalxBr0kNc6gl6TGGfSS1DiDXpIaZ9BLUuMGucLUzUmOJNnfV/uNJE8lebBb\nLu+774Ykjyb5dpKfH1fjkqTBDHJEfwtw2Rr1T1bV9m65ByDJ6+hdYvCnusf8l5VryEqSJmPdoK+q\n+4BBr/t6JfA7VfWDqvpz4FHgoiH6kyQNaZg5+vcl2ddN7ZzW1c4Gnuzb52BXkyRNyGaD/ibgfGA7\ncAj4eFfPGvvWWgMk2ZlkKcnS8vLyJtuQJK1nU0FfVYer6vmqegH4DC9OzxwEzu3b9Rzg6eOMsauq\nFqtqcX5+fjNtSJIGsKmgT3JW3+Y7gZUzcu4G3p3kR5OcB2wD/udwLUqShnHKejskuR14C3B6koPA\nh4G3JNlOb1rmceA9AFX1UJI7gD8FjgLXVdXz42ldkjSIVK05hX5CLS4u1tLS0qTbkKSZkmRvVS2u\nt5+fjJWkxhn0ktQ4g16SGmfQS1LjDHpJapxBL0mNM+glqXEGvSQ1zqCXpMYZ9JLUOINekhpn0EtS\n4wx6SWqcQS9JjTPoJalxBr0kNW7doE9yc5IjSfb31X4zybeS7EtyV5JTu/pCkr9M8mC3fHqczUuS\n1jfIEf0twGWranuA11fVG4A/A27ou++xqtreLe8dTZuSpM1aN+ir6j7g2VW1r1TV0W7zfuCcMfQm\nSRqBUczR/wrwe33b5yX5epI/TPKmEYwvSRrCKcM8OMmNwFFgd1c6BGypqmeSXAj8bpKfqqrvrfHY\nncBOgC1btgzThiTpZWz6iD7JDuDtwNVVVQBV9YOqeqZb3ws8BvzEWo+vql1VtVhVi/Pz85ttQ5K0\njk0FfZLLgF8Drqiq5/rq80lO7tZfA2wDvjOKRiVJm7Pu1E2S24G3AKcnOQh8mN5ZNj8K7EkCcH93\nhs2bgX+X5CjwPPDeqnp2zYElSSfEukFfVVetUf7ccfa9E7hz2KYkSaPjJ2MlqXEGvSQ1zqCXpMYZ\n9JLUOINekhpn0EtS4wx6SWqcQS9JjTPoJalxBr0kNc6gl6TGGfSS1DiDXpIaZ9BLUuMMeklqnEEv\nSY0bKOiT3JzkSJL9fbVXJ9mT5JHu9rSuniS/leTRJPuSvHFczUuS1jfoEf0twGWratcD91bVNuDe\nbhvgbfSuFbsN2AncNHybkqTNGijoq+o+YPW1X68Ebu3WbwXe0Vf/fPXcD5ya5KxRNCtJ2rhh5ujP\nrKpDAN3tGV39bODJvv0OdjVJ0gSM483YrFGrY3ZKdiZZSrK0vLw8hjYkSTBc0B9emZLpbo909YPA\nuX37nQM8vfrBVbWrqharanF+fn6INiRJL2eYoL8b2NGt7wC+3Ff/pe7sm4uB765M8UiSTrxTBtkp\nye3AW4DTkxwEPgx8FLgjybXAE8C7ut3vAS4HHgWeA355xD1LkjZgoKCvqquOc9ela+xbwHXDNCVJ\nGh0/GStJjTPoJalxBr0kNc6gl6TGGfSS1DiDXpIaZ9BLUuMMeklqnEEvSY0z6CWpcQa9JDXOoJek\nxhn0ktQ4g16SGmfQS1LjDHpJapxBL0mNG+gKU2tJ8lrgC32l1wC/DpwK/Atguat/qKru2XSHkqSh\nbDroq+rbwHaAJCcDTwF30btG7Cer6mMj6VCSNJRRTd1cCjxWVQdGNJ4kaURGFfTvBm7v235fkn1J\nbk5y2loPSLIzyVKSpeXl5bV2kSSNwNBBn+RHgCuA/9aVbgLOpzetcwj4+FqPq6pdVbVYVYvz8/PD\ntiFJOo5RHNG/DXigqg4DVNXhqnq+ql4APgNcNILnkCRt0iiC/ir6pm2SnNV33zuB/SN4DknSJm36\nrBuAJHPAW4H39JX/Q5LtQAGPr7pPknSCDRX0VfUc8LdW1a4ZqiNJ0kj5yVhJapxBL0mNM+glqXEG\nvSQ1zqCXpMYZ9JLUOINekhpn0EtS4wx6SWqcQS9JjTPoJalxBr0kNc6gl6TGGfSS1DiDXpIaZ9BL\nUuOGuvAIQJLHge8DzwNHq2oxyauBLwAL9K4y9YtV9b+HfS5J0saN6oj+H1TV9qpa7LavB+6tqm3A\nvd22JGkCxjV1cyVwa7d+K/COMT2PJGkdowj6Ar6SZG+SnV3tzKo6BNDdnrH6QUl2JllKsrS8vDyC\nNiRJaxl6jh64pKqeTnIGsCfJtwZ5UFXtAnYBLC4u1gj6kCStYegj+qp6urs9AtwFXAQcTnIWQHd7\nZNjnkSRtzlBBn+SVSX5sZR34h8B+4G5gR7fbDuDLwzyPJGnzhp26ORO4K8nKWL9dVb+f5E+AO5Jc\nCzwBvGvI55EkbdJQQV9V3wF+eo36M8Clw4wtSRoNPxkrSY0z6CWpcQa9JDXOoJekxhn0ktQ4g16S\nGmfQS1LjDHpJapxBL0mNM+glqXEGvSQ1zqCXpMYZ9JLUOINekhpn0EtS4wx6SWrcpoM+yblJvprk\n4SQPJXl/V/+NJE8lebBbLh9du5KkjRrmClNHgQ9W1QPddWP3JtnT3ffJqvrY8O1Jkoa16aCvqkPA\noW79+0keBs4eVWOSpNEYyRx9kgXgAuBrXel9SfYluTnJaaN4DknS5gwd9EleBdwJfKCqvgfcBJwP\nbKd3xP/x4zxuZ5KlJEvLy8vDtiFJOo6hgj7JK+iF/O6q+hJAVR2uquer6gXgM8BFaz22qnZV1WJV\nLc7Pzw/ThiTpZQxz1k2AzwEPV9Un+upn9e32TmD/5tuTJA1rmLNuLgGuAb6Z5MGu9iHgqiTbgQIe\nB94zVIeSpKEMc9bNHwFZ4657Nt+OJGnU/GSsJDXOoJekxhn0ktQ4g16SGmfQS1LjDHpJapxBL0mN\nM+glqXEGvSQ1zqCXpMYZ9JLUOINekhpn0EtS4wx6SWqcQS9JjTPoJalxYwv6JJcl+XaSR5NcP67n\nkSS9vLEEfZKTgf8MvA14Hb3LC75uHM81Srt3w8ICnHRS73b37rbHm4UeZ+Fr1vSZhdfNCX0dVtXI\nF+BngD/o274BuOF4+1944YU1abfdVjU3VwUvLnNzvXqL481Cj7PwNWv6zMLrZlTjAUs1SCYPstNG\nF+AfA5/t274G+NTx9p+GoN+69aXf9JVl69Y2x5uFHmfha9b0mYXXzajGGzTo09t3tJK8C/j5qvrn\n3fY1wEVV9at9++wEdgJs2bLlwgMHDoy8j4046aTet3q1BF54ob3xxjHmtI83rjE1XWbhdTOq8ZLs\nrarFdZ9vI81twEHg3L7tc4Cn+3eoql1VtVhVi/Pz82NqY3BbtmysPuvjjWPMaR9vXGNquszC6+ZE\nvw7HFfR/AmxLcl6SHwHeDdw9pucaiY98BObmXlqbm+vVWxxvHGNO+3jjGlPTZRZeNyf8dTjI/M5m\nFuBy4M+Ax4AbX27faZijr+q9EbJ1a1XSux32DbppH28WepyFr1nTZxZeN6MYj0nO0W/U4uJiLS0t\nTboNSZopk56jlyRNCYNekhpn0EtS4wx6SWqcQS9JjZuKs26SLAPDfDT2dOAvRtTOOEx7fzD9PU57\nfzD9PU57f2CPG7W1qtb9xOlUBP2wkiwNcorRpEx7fzD9PU57fzD9PU57f2CP4+LUjSQ1zqCXpMa1\nEvS7Jt3AOqa9P5j+Hqe9P5j+Hqe9P7DHsWhijl6SdHytHNFLko5jpoN+2i9AnuTcJF9N8nCSh5K8\nf9I9rSXJyUm+nuS/T7qXtSQ5NckXk3yr+17+zKR76pfkX3X/vvuT3J7kb0xBTzcnOZJkf1/t1Un2\nJHmkuz1tCnv8ze7feV+Su5KcOk399d33b5JUktMn0dtGzWzQz8gFyI8CH6yqnwQuBq6bwh4B3g88\nPOkmXsZ/An6/qv4u8NNMUa9Jzgb+JbBYVa8HTqZ3/YVJuwW4bFXteuDeqtoG3NttT9ItHNvjHuD1\nVfUGen/m/IYT3VSfWzi2P5KcC7wVeOJEN7RZMxv0wEXAo1X1nar6K+B3gCsn3NNLVNWhqnqgW/8+\nvYA6e7JdvVSSc4B/BHx20r2sJcmPA28GPgdQVX9VVf9nsl0d4xTgbyY5BZhj1dXUJqGq7gOeXVW+\nEri1W78VeMcJbWqVtXqsqq9U1dFu8356V6ebiON8DwE+CfxbYGbe4JzloD8beLJv+yBTFqL9kiwA\nFwBfm2wnx/iP9F6003rF1NcAy8B/7aaXPpvklZNuakVVPQV8jN7R3SHgu1X1lcl2dVxnVtUh6B2E\nAGdMuJ/1/Arwe5Nuol+SK4Cnquobk+5lI2Y56LNGbSp/wyZ5FXAn8IGq+t6k+1mR5O3AkaraO+le\nXsYpwBuBm6rqAuD/Mvkph7/WzXNfCZwH/B3glUn+6WS7mn1JbqQ39bl70r2sSDIH3Aj8+qR72ahZ\nDvp1L0A+DZK8gl7I766qL026n1UuAa5I8ji9qa+fTXLbZFs6xkHgYFWt/E/oi/SCf1r8HPDnVbVc\nVf8P+BLw9yfc0/EcTnIWQHd7ZML9rCnJDuDtwNU1Xed/n0/vF/o3up+Zc4AHkvztiXY1gFkO+qm/\nAHmS0JtbfriqPjHpflarqhuq6pyqWqD3/fsfVTVVR6NV9b+AJ5O8titdCvzpBFta7Qng4iRz3b/3\npUzRm8Wr3A3s6NZ3AF+eYC9rSnIZ8GvAFVX13KT76VdV36yqM6pqofuZOQi8sXuNTrWZDfruDZv3\nAX9A7wfrjqp6aLJdHeMS4Bp6R8oPdsvlk25qBv0qsDvJPmA78O8n3M9f6/6n8UXgAeCb9H6mJv7J\nySS3A38MvDbJwSTXAh8F3prkEXpnjXx0Cnv8FPBjwJ7u5+XTU9bfTPKTsZLUuJk9opckDcagl6TG\nGfSS1DiDXpIaZ9BLUuMMeklqnEEvSY0z6CWpcf8f0xsqHY41floAAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x214949ecfd0>"
+       "<matplotlib.figure.Figure at 0x15d60e61550>"
       ]
      },
      "metadata": {},
