Total number of trees

--- a/Grammar.ipynb
+++ b/Grammar.ipynb
@@ -173,6 +173,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2090918"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Number of trees\n",
+    "def number_trees(size):\n",
+    "    \n",
+    "    if(size <= 1):\n",
+    "        return 2\n",
+    "    \n",
+    "    return 2 + all_trees(size/2)**2\n",
+    "\n",
+    "number_trees(16)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 85,
    "metadata": {},
    "outputs": [
